feedback (half working)

--- a/DarkFit app/DarkFit app/DarkFit app.csproj
+++ b/DarkFit app/DarkFit app/DarkFit app.csproj
@@ -63,6 +63,9 @@
     <EmbeddedResource Update="BuyPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="FeedbackPopup.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="GroupsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
