trainersinfopage fix+ massage popup+ orders+

--- a/DarkFit app/DarkFit app/DarkFit app.csproj
+++ b/DarkFit app/DarkFit app/DarkFit app.csproj
@@ -69,7 +69,13 @@
     <EmbeddedResource Update="GroupsPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="MassageOrder.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="MassagePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="MassagePopup.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="MenuPopup.xaml">
